--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,9 @@ body{
     background: gray
 }
 
-.wrap{
-    width"1000px;
+.wrap
+{
+    width:1000px;
     background:white;
     margin-left:auto;
     margin-right:auto;
