--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,77 @@ table td, table th
 	width:100%;
 
 }
+
+/*---Andris uzdarbojas-------------------------------- */
+    * {
+        box-sizing: border-box;
+    }
+    select {
+        background-position: 10px 10px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 5px 5px 5px 5px;
+        border: 1px solid #ddd;
+        margin-bottom: 12px;
+    }
+    button{
+        background-position: 10px 10px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 5px 5px 5px 5px;
+        border: 1px solid rgb(0, 0, 0);
+        margin-bottom: 12px;
+    }
+    #myInput {
+        background-position: 10px 10px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 5px 5px 5px 5px;
+        border: 1px solid #ddd;
+        margin-bottom: 12px;
+    }
+
+    #myTable {
+        border-collapse: collapse;
+        width: 100%;
+        border: 1px solid #ddd;
+        font-size: 18px;
+    }
+
+    #myTable th,
+    #myTable td {
+        text-align: left;
+        padding: 12px;
+    }
+
+    #myTable tr {
+        border-bottom: 1px solid #ddd;
+    }
+
+    #myTable tr.header,
+    #myTable tr:hover {
+        background-color: #f1f1f1;
+    }
+
+
+
+    .row {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+
+    .col {
+        position: relative;
+        width: 33%;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+/*-----------------------------------------------------*/
