--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,7 @@ body {
     width: 50px;
 }
 
-table td,
-table th {
+table td, table th {
     border: 1px solid grey;
 }
 
@@ -39,8 +38,7 @@ table th {
     padding: 5px;
 }
 
-.noborder th,
-.noborder td {
+.noborder th, .noborder td {
     border: none;
     padding: 5px;
 }
@@ -48,7 +46,6 @@ table th {
 .noborder td input {
     width: 100%;
 }
-
 
 /*---Andris uzdarbojas-------------------------------- */
 
@@ -93,8 +90,7 @@ button {
     font-size: 18px;
 }
 
-#myTable th,
-#myTable td {
+#myTable th, #myTable td {
     text-align: left;
     padding: 14px;
 }
@@ -103,8 +99,7 @@ button {
     border-bottom: 1px solid #ddd;
 }
 
-#myTable tr.header,
-#myTable tr:hover {
+#myTable tr.header, #myTable tr:hover {
     background-color: #f1f1f1;
 }
 
@@ -124,5 +119,9 @@ button {
     padding-left: 15px;
 }
 
-
 /*-----------------------------------------------------*/
+/*birutas stili*/
+#h4b {
+    color: royalblue;
+}
+/*birutas stili beidzas*/
