--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ table td, table th {
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
+    display:inline-block;
 }
 
 .noborder th, .noborder td {
