--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ table td, table th {
     border: 1px solid black;
     border-radius: 5px;
     display:inline-block;
+    text-decoration: none;
 }
 
 .noborder th, .noborder td {
