--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ table td, table th {
 .button {
     background: gray;
     color: white;
+    width: 100%;
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
