--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ table td, table th {
     cursor: pointer;
 }
 
+option:first {
+    color: grey;
+}
+
 /*---Andris uzdarbojas-------------------------------- */
 
 * {
