--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body {
     margin-right: auto;
     padding: 10px;
 }
+input{
+height:28px;
+}
 
 .header {}
 
@@ -45,7 +48,8 @@ table td, table th {
     border-radius: 5px;
     display:inline-block;
     text-decoration: none;
-}
+	text-align: center;
+	}
 
 table,.noborder{
 	border-collapse: collapse;
@@ -98,7 +102,7 @@ button {
     padding: 5px 5px 5px 5px;
     border: 1px solid rgb(0, 0, 0);
     margin-bottom: 12px;
-	text-align: center;//varbūt nevajag
+
 }
 
 #myInput {
