--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+input
+{
+    height:28px;
+}
+
 .wrap {
     width: 1000px;
     background: white;
