--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-input
-{
-    height:28px;
+input {
+    height: 28px;
+}
+
+a:hover {
+    color: rgb(13, 26, 104);
 }
 
 .wrap {
@@ -18,8 +21,9 @@ input
     margin-right: auto;
     padding: 10px;
 }
-input{
-height:28px;
+
+input {
+    height: 28px;
 }
 
 .header {}
@@ -51,14 +55,15 @@ table td, table th {
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
-    display:inline-block;
+    display: inline-block;
     text-decoration: none;
-	text-align: center;
-	}
+    text-align: center;
+    h
+}
 
-table,.noborder{
-	border-collapse: collapse;
-  }
+table, .noborder {
+    border-collapse: collapse;
+}
 
 .noborder th, .noborder td {
     border: none;
@@ -69,8 +74,8 @@ table,.noborder{
     width: 100%;
 }
 
-.noborder tr{
-	border-bottom: 1px solid;
+.noborder tr {
+    border-bottom: 1px solid;
 }
 
 .link {
@@ -107,7 +112,6 @@ button {
     padding: 5px 5px 5px 5px;
     border: 1px solid rgb(0, 0, 0);
     margin-bottom: 12px;
-
 }
 
 #myInput {
@@ -160,7 +164,7 @@ button {
 
 /*birutas stili*/
 
-#h4b {
+#h2b {
     color: royalblue;
 }
 
@@ -170,22 +174,29 @@ button {
     display: flex;
     gap: 10px;
 }
+
 /*Andrejs stils*/
-#ievads{
-    width: 23%; 
+
+#ievads {
+    width: 23%;
 }
-#saglabat{
-    width: 23%; 
+
+#saglabat {
+    width: 23%;
 }
+
 .nosaukumi {
     width: 15%;
 }
+
 .dati {
     width: 40%;
     height: 29px;
 }
+
 #datortehnika {
     font-size: 18px;
-    font-weight: bold; 
+    font-weight: bold;
 }
+
 /*Andrejs stili beidzas*/
