--- a/templates/klase.html
+++ b/templates/klase.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 	<head>
-		<title>Skolas datortehnikas uzskaite</title>
 		<meta charset="UTF-8">
-		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-		<script src='js/head_food.js'></script>
-		<script src='js/main.js'></script>
+        <title>Skolas datortehnikas uzskaite-kabineta tehnika</title>
+        <link rel='stylesheet' href='static/css/style.css'>
+        <script src='static/js/main.js'></script>
 	</head>
 	<body>
 		<script>
 			let kab=findGetParameter("k");// kosaka kabinetu
-			head(kab+". klasē pieejamā tehnika","klases_tehnika.html");
+			head(kab+". klasē pieejamā tehnika","/klases");
 		</script>
 		<!-- -->
 		<hr></hr>
