--- a/templates/problema.html
+++ b/templates/problema.html
@@ -1,21 +1,18 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html  lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Pieteikt problēmu</title>
+		<title>Skolas datortehnikas uzskaite-problēmu saraksts</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-		<script src='js/block.js'></script>
-		<script src='js/mekleet.js'></script>
-		<script src='js/head_food.js'></script>
-		<script src='js/main.js'></script>
+		<link rel='stylesheet' href='static/css/style.css'>
+		<script src='static/js/main.js'></script>
 	</head>
-	<body onload='statuss("rinda")'>
+	<body>
 		<script>
-			head("Datortehnikas problēmu saraksts","index.html");
+			head("Datortehnikas problēmu saraksts","/");
 		</script>
 		<!-- -->
-		<hr>
+		<hr></hr>
 		<form>
 		<table>
 			<thead>
