--- a/templates/pieteikt.html
+++ b/templates/pieteikt.html
@@ -1,20 +1,16 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html  lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Pieteikt problēmu</title>
+		<title>Skolas datortehnikas uzskaite-pieteikt problēmu</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-		<script src='js/block.js'></script>
-		<script src='js/mekleet.js'></script>
-		<script src='js/head_food.js'></script>
-		<script src='js/main.js'></script>
+		<link rel='stylesheet' href='static/css/style.css'>
+		<script src='static/js/main.js'></script>
 	</head>
-
-<body>
-    <script>
-        head("Pieteikt datortehnikas problēmu","index.html");
-    </script>
+	<body>
+		<script>
+			head("Pieteikt datortehnikas problēmu","/");
+		</script>
     <!-- -->
     <form>
 	<table>
@@ -67,13 +63,11 @@
 		</thead>
     </table>
 </form>
-
     <!-- -->
     <script>
         foot();
 		getList("unity_type","myType", "");
 		getList("room","myCab", "");
-
 	</script>
 </body>
 
