--- a/templates/pievienot.html
+++ b/templates/pievienot.html
@@ -1,41 +1,38 @@
-<html>
-    <head>
+<!DOCTYPE html>
+<html  lang="en">
+	<head>
 		<meta charset="UTF-8">
-        <title>
-            Pievienot datortehniku
-        </title>
-        <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-        <script src='js/nomainiLaukus.js'></script>
-		<script src='js/head_food.js'></script>
-</head>
-
-<body>
-    <script>
-        head("Jaunas tehnikas ievade","visas_tehnikas_db.html");
-    </script>
+		<title>Skolas datortehnikas uzskaite- pievienot datortehniku</title>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<link rel='stylesheet' href='static/css/style.css'>
+		<script src='static/js/main.js'></script>
+	</head>
+	<body>
+		<script>
+			head("Jaunas tehnikas ievade","/admin/tehnika");
+		</script>
     <!-- -->
 
         <!--Izvēlēties ievadāmo tehniku:-->
         <div class="flex">
             <div class="col">
-                <label for="tehnika"> Datortehnikas veids:</label>
+                <label for="tehnika">Datortehnikas veids:</label>
             </div>
             <div class="col">
                 <select name="tehnika" id="tehnika" onchange="nomainiLaukus()">
-                    <option value="dators">dators</option>
-                    <option value="monitors">monitors</option>
-                    <option value="printeris">printeris</option>
+                    <option value="dators">Dators</option>
+                    <option value="monitors">Monitors</option>
+                    <option value="printeris">Printeris</option>
                 </select>
             </div>
         </div>
         
         <!-- <button class=button id=ievads onclick="nomainiLaukus()">Izvēlies</button>
  -->        
-        <br><br><hr>
+        <br><br>
+		<hr></hr>
         <!---->
-   
-
-            <p id="datortehnika">Izvēlētā tehnika</p>
+             <p id="datortehnika">Izvēlētā tehnika</p>
             <button class="nosaukumi" for="dati1"id="nos1">parametrs</button>
             <input class="dati" type="text" id="dati1"><br>
             <button class="nosaukumi" for="dati1"id="nos2">parametrs</button>
@@ -44,11 +41,9 @@
             <input class="dati" type="text" id="dati3"><br>
             <button class="nosaukumi" for="dati1"id="nos4">parametrs</button>
             <input class="dati" type="text" id="dati4"><br>    
-            <br><hr>     
-            <button class=button id=saglabat >Saglabāt</button> 
-
-
- 
+            <br>
+			<hr></hr>     
+            <input type="button" id="saglabat" value="Saglabāt"> 
     <!-- -->
     <script>
         foot();
