--- a/templates/klases.html
+++ b/templates/klases.html
@@ -42,7 +42,7 @@
 						<th>Informācija</th>
 					</tr>
                 </thead>
-                <tbody class="rinda" id="rindas">
+                <tbody id="rinda">
                 </tbody>
             </table>
      <!-- -->
