--- a/templates/tehnika.html
+++ b/templates/tehnika.html
@@ -45,7 +45,7 @@
                 <th>Informācija</th>
             </tr>
         </thead>
-        <tbody class="tabulasRindas"></tbody>
+        <tbody id="rinda"></tbody>
     </table>
     <script>
         foot();
